number input alpha

--- a/src/common/styles/customProperties.css
+++ b/src/common/styles/customProperties.css
@@ -2,4 +2,10 @@
     --sliderTrackBgColor: hsl(180deg, 0%, 70%);
     --sliderThumbBgColor: hsl(190deg, 100%, 50%);
     --sliderThumbBorderColor: hsl(190deg, 100%, 30%);
+
+    --numberInputSpinFontColor: #1c1c1c;
+    --numberInputSpinBgColor: hsl(190deg, 100%, 90%);
+    --numberInputSpinHoverColor: hsl(190deg, 100%, 75%);
+    --numberInputSpinActiveColor: hsl(190deg, 100%, 50%);
+    --numberInputSpinBorderColor: hsl(190deg, 100%, 50%);
 }
