--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,6 @@
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
-	display: flex;
 }
 
 a,
@@ -18,4 +17,8 @@ a,
 	a:hover {
 		background-color: hsla(160, 100%, 37%, 0.2);
 	}
+}
+
+.router-content {
+	display: flex;
 }
