changed page layout

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
+	height: 100dvh;
 }
 
 a,
@@ -17,8 +18,4 @@ a,
 	a:hover {
 		background-color: hsla(160, 100%, 37%, 0.2);
 	}
-}
-
-.router-content {
-	display: flex;
 }
