--- a/src/common/styles/customProperties.css
+++ b/src/common/styles/customProperties.css
@@ -8,4 +8,7 @@
     --numberInputSpinHoverColor: hsl(190deg, 100%, 75%);
     --numberInputSpinActiveColor: hsl(190deg, 100%, 50%);
     --numberInputSpinBorderColor: hsl(190deg, 100%, 30%);
+
+    --colorPickerBorderColor: hsl(190deg, 100%, 30%);
+    --colorTextBorderColor: hsl(190deg, 100%, 30%);
 }
