--- a/src/common/styles/customProperties.css
+++ b/src/common/styles/customProperties.css
@@ -11,4 +11,8 @@
 
     --colorPickerBorderColor: hsl(190deg, 100%, 30%);
     --colorTextBorderColor: hsl(190deg, 100%, 30%);
+
+    /* transition 関係 */
+    --circleLikeAnimation: cubic-bezier(0, .55, .45, 1);
+    --mostUseTransition: all .3s var(--circleLikeAnimation);
 }
