--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,21 +1,8 @@
 @import './base.css';
 
-#app {
+* {
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
 	font-size: 14px;
-}
-
-a,
-.green {
-	text-decoration: none;
-	color: hsla(160, 100%, 37%, 1);
-	transition: 0.4s;
-}
-
-@media (hover: hover) {
-	a:hover {
-		background-color: hsla(160, 100%, 37%, 0.2);
-	}
 }
